--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- 使用smooth-scrollbar -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scrollbar/8.7.4/smooth-scrollbar.min.js"></script>
+
 <script>
     // ratio 缓动系数
     // fixed:0 浏览器滚动
