--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Update 3.3.8 -->
+
 <!-- jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
 <!-- 使用smooth-scrollbar -->
@@ -10,13 +12,38 @@
         overflow: auto;
         transform: translate3d(0px, calc(var(--scroll-yy)*-1px), 0px);
     }
+
+    .split-warpper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 20;
+    }
 </style>
 
 <script>
+    // before active Als_split
+    var splittt = 1;
+    if (splittt == 1) {
+        if (!/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)) {
+            $('.the-normal-wrapper').addClass('split-warpper')
+            $('.the-normal-wrapper').appendTo('body')
+            init_scroll('.Scroll-wrapper', 0.05, 0, '.the-normal-wrapper', 1)
+            Als_split('.test-box', 0, 100)
+        } else {
+            init_scroll('.Scroll-wrapper', 0.05, 0, null, 1)
+        }
+    } else {
+        init_scroll('.Scroll-wrapper', 0.05, 0, null, 0)
+    }
+
     // ratio 缓动系数
     // fixed:0 浏览器滚动
     // fixed:1 JS滚动
-    init_scroll(elm, ratio, fixed)
+    // eventTaget: split滚动识别元素 '.elm'
+    // mobile: 是否在移动端启用平滑滚动 0/1
+    init_scroll(elm, ratio, fixed, eventTaget, mobile)
 
     // set_var 1：用css var输出，0：用data输出
 
@@ -30,7 +57,8 @@
     Als_parallax(elm, limit, friction_y, friction_x, set_var)
 
     // limit:1 限制到父级容器范围内
-    Als_sticky(elm, limit, friction_y, friction_x, set_var)
+    // set_fixed: 触发时是否启用fixed定位 0/1
+    Als_sticky(elm, limit, friction_y, friction_x, set_var, set_fixed)
 
     // 在Als_sticky元素的内部元素
     Als_sticky_child(elm, limit, set_var)
@@ -47,9 +75,9 @@
 <!-- data输出时 JQ控制样式-->
 <script>
     function run_Als_split() {
-        $('.elm-split').each(function () {
+        $('.test-box').each(function () {
             let $this = $(this);
-            $this.css('transform', `perspective(1000px) translate3d(0px, ${$this.attr('data-spl_yy') * 1}px, 0px)`)
+            $this.css('transform', `translate3d(0px, ${$this.attr('data-spl_yy') * 1}px, 0px)`)
         })
     }
     function run_Als_parallax() {
@@ -70,6 +98,15 @@
         $('.test-sticky-c.skt-2').each(function () {
             let $this = $(this);
             $this.css('transform', `translate3d(${$this.attr('data-fx') * 1}px, ${$this.attr('data-yy') * -1}px, 0px)`)
+        })
+        // update good fuction for 3.3.8
+        $('.test-sticky-c.skt-2').each(function () {
+            let $this = $(this);
+            if ($this.hasClass('sticky-fixed')) {
+                $this.children().css('transform', `translate3d(${$this.attr('data-fx') * 1}px, 0px, 0px)`)
+            } else {
+                $this.children().css('transform', `translate3d(${$this.attr('data-fx') * 1}px, ${$this.attr('data-yy') * -1}px, 0px)`)
+            }
         })
         $('.skyye').each(function () {
             let $this = $(this);
